--- a/style.css
+++ b/style.css
@@ -17,14 +17,16 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: rgb(121, 160, 95);
 }
 
-.barra-navegacao {
-    font-family: 'Open Sans', sans-serif;
+.bar-nav {
+    font-family: 'Raleway', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 40px 50px;
+    font-weight: 400;
     text-decoration: none;
     color: var(--VeryDark-Blue);
 }
@@ -40,4 +42,53 @@ ul li {
 ul li:nth-child(2) {
     align-items: center;
     margin: 0 50px;
+}
+
+.container {
+    margin: 50px;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+}
+
+.title {
+    font-family: 'Raleway', sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    color: var(--VeryDark-Blue);
+    line-height: 1.5em;
+}
+
+.content {
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--VeryDark-Blue);
+    line-height: 1.4em;
+}
+
+input {
+    width: 305px;
+    border: 1px solid var(--Desaturated-Blue);
+    border-radius: 5px;
+    padding: 10px;
+    margin-right: 15px;
+    font-size: 13px;
+}
+
+button {
+    width: 200px;
+    border-radius: 5px;
+    background-color: var(--Bright-Blue);
+    padding: 10px;
+    color: var(--Light-Grayish-Blue);
+    font-size: 13px;
+    font-weight: 700;
+}
+
+.section-img {
+    width: 650px;
+}
+
+.second-section-img {
+    width: 550px;
 }
