--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@
 
     --Light-Grayish-Blue: hsl(240, 75%, 98%);
     --Light-Gray: hsl(0, 0%, 75%);
+    --White: #ffffff
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
     background-color: rgb(121, 160, 95);
+    padding: 0 1px;
 }
 
 .bar-nav {
@@ -46,9 +48,10 @@ ul li:nth-child(2) {
 
 .container {
     margin: 50px;
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
+    margin-left: 50px;
     align-items: center;
+    margin-bottom: 150px;
 }
 
 .title {
@@ -61,9 +64,10 @@ ul li:nth-child(2) {
 
 .content {
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 700;
     color: var(--VeryDark-Blue);
     line-height: 1.4em;
+    margin: 30px 0;
 }
 
 input {
@@ -76,7 +80,7 @@ input {
 }
 
 button {
-    width: 200px;
+    width: 190px;
     border-radius: 5px;
     background-color: var(--Bright-Blue);
     padding: 10px;
@@ -86,9 +90,138 @@ button {
 }
 
 .section-img {
-    width: 650px;
+    width: 700px;
+    margin-left: 31px;
+}
+
+.curve-img-desktop {
+    width: -webkit-fill-available;
+    height: 130px;
+    position: relative;
+    top: 4px; 
 }
 
 .second-section-img {
-    width: 550px;
+    width: 600px;
+    margin-top: 33px;
+}
+
+section {
+    background-color: var(--Light-Grayish-Blue);
+}
+
+.container-section-second {
+    align-items: flex-start;
+    padding: 50px;
+    display: flex;
+    padding-left: 50px;
+}
+
+.content-section-second {
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--VeryDark-Blue);
+    line-height: 1.4em;
+    margin-top: 30px;
+}
+
+.link {
+    color: var(--Moderate-Cyan);
+    font-size: 18px;
+    border-bottom: 2px solid var(--Moderate-Cyan);
+    padding-bottom: 2px;
+    background-image: url('./images/icon-arrow.svg');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: 170px;
+    padding-right: 25px;
+}
+
+.msn {
+    background-image: url('./images/icon-quotes.svg');
+    background-repeat: no-repeat;
+    background-position: 30px 30px;
+    margin-top: 50px;
+    padding: 60px 30px 30px 30px;
+    background-color: var(--White);
+    width: 330px;
+    line-height: 25px;    
+    border-radius: 10px;
+    box-shadow: 0px 0px 17px 1px var(--Light-Gray);
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.profile img {
+    width: 15%;
+    border-radius: 25px;
+    margin-right: 10px;
+}
+
+.profile p {
+    font-size: 13px;
+    line-height: 18px;
+}
+
+.profile p:nth-child(1) {
+    font-weight: 700;
+}
+
+.access {
+    font-family: 'Raleway', sans-serif;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 355px;
+    background-color: var(--Desaturated-Blue);
+    color: var(--Light-Grayish-Blue);
+    padding: 90px 50px;
+}
+
+.access h2 {
+    
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 1.5em;
+    margin-bottom: 20px;
+}
+
+.access p {
+    line-height: 25px;
+    font-size: 14px;
+}
+
+.access-contact input {
+    display: flex;
+    width: 495px;
+    margin: 10px;
+    padding: 15px;
+    font-size: 16px;
+}
+
+.access-contact button {
+    margin: 10px;
+    padding: 15px 0;
+    width: 230px;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: var(--Bright-Blue);
+}
+
+footer {
+    background: linear-gradient(var(--VeryDark-Blue), hsl(243, 87%, 17%));
+    color: var(--Light-Grayish-Blue);
+}
+
+footer img {
+    padding-left: 50px;
+    padding-top: 80px;
+}
+
+.box {
+    display: flex;
+    justify-content: space-between;
 }
