--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: rgb(121, 160, 95);
     padding: 0 1px;
 }
 
@@ -107,10 +106,11 @@ button {
 }
 
 section {
-    background-color: var(--Light-Grayish-Blue);
+    
 }
 
 .container-section-second {
+    background-color: var(--Light-Grayish-Blue);
     align-items: flex-start;
     padding: 50px;
     display: flex;
@@ -224,4 +224,19 @@ footer img {
 .box {
     display: flex;
     justify-content: space-between;
+    width: 940px;
+    padding: 25px 50px;
+}
+
+.box p {
+    margin-bottom: 20px;
+}
+
+.icons img {
+    width: 30px;
+    padding: 0px;
+}
+
+.icons a:nth-child(2) {
+    margin: 0 10px;
 }
