--- a/style.css
+++ b/style.css
@@ -105,10 +105,6 @@ button {
     margin-top: 33px;
 }
 
-section {
-    
-}
-
 .container-section-second {
     background-color: var(--Light-Grayish-Blue);
     align-items: flex-start;
@@ -224,7 +220,7 @@ footer img {
 .box {
     display: flex;
     justify-content: space-between;
-    width: 940px;
+    width: 1000px;
     padding: 25px 50px;
 }
 
@@ -232,11 +228,38 @@ footer img {
     margin-bottom: 20px;
 }
 
-.icons img {
-    width: 30px;
-    padding: 0px;
-}
-
-.icons a:nth-child(2) {
-    margin: 0 10px;
-}
+  .icon-bar a {
+    width: 11px;
+    height: 11px;
+    display: inline-block;
+    padding: 16px;
+    border: 1px solid var(--Light-Grayish-Blue);
+    border-radius: 28px;
+    transition: all 0.3s ease;
+    background: transparent;
+    color: var(--Light-Grayish-Blue);
+    font-size: 16px;
+    margin: 0px 7px;
+  }
+  
+  /* Style the social media icons with color, if you want */
+  .icon-bar a:hover {
+    color: var(--Bright-Blue);
+    border: 1px solid var(--Bright-Blue);
+  } 
+  
+  .facebook {  
+    text-align: center;
+  }
+  
+  .twitter {
+    text-align: center;
+    background: #55ACEE;
+    color: rgb(216, 27, 27);
+  }
+  
+  .instagram {
+    text-align: center;
+    background: #dd4b39;
+    color: white;
+  }
