--- a/style.css
+++ b/style.css
@@ -268,6 +268,20 @@ footer img {
     text-align: center;
   }
 
+  @media screen and (min-width: 1366px) {
+    .section-img {
+        width: 675px;
+    }
+
+    .title {
+        font-size: 39px;
+    }
+
+    .content-section-second p {
+        margin-bottom: 30px;
+    }
+}
+
   @media screen and (max-width: 375px) {
 
     .bar-nav {
@@ -463,3 +477,5 @@ footer img {
         justify-content: center;
     }
 }
+
+
